@@ -511,8 +511,7 @@ npgettext() {
 	eixf_pgti="$1$eixf_pgtglue$2"
 	if eixf_pgtt=`ngettext "$eixf_pgti" "$3" "$4" && printf A` && \
 		eixf_pgtt=${eixf_pgtt%A} && \
-		[ x"$eixf_pgtt" != x"$eixf_pgti" ] && \
-		[ x"$eixf_pgtt" != x"$3" ]
+		[ x"$eixf_pgtt" != x"$eixf_pgti" ]
 	then	printf '%s' "$eixf_pgtt"
 	elif [ "$4" -eq 1 ]
 	then	printf '%s' "$2"
@@ -569,15 +568,15 @@ eval_pgettext() {
 	eval_gettext "$@"
 }
 ngettext() {
-	if [ "$3" -gt 1 ]
-	then	gettext "$2"
-	else	gettext "$1"
+	if [ "$3" -eq 1 ]
+	then	gettext "$1"
+	else	gettext "$2"
 	fi
 }
 eval_ngettext() {
-	if [ "$3" -gt 1 ]
-	then	eval_gettext "$2"
-	else	eval_gettext "$1"
+	if [ "$3" -eq 1 ]
+	then	eval_gettext "$1"
+	else	eval_gettext "$2"
 	fi
 }
 npgettext() {
